# cookiecutter-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cookiecutter.json  pyproject.toml  setup.cfg  setup.py  tox.ini
tests/: test_project_generation.py  test_sanity.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.py  tox.ini
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: setup.py
