[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_name}}"
authors = [
    {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"},
]
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]

[tool.ruff]
select = ["D", "E", "F", "I", "N", "W"]
ignore = [
    "N999",  # Invalid module name (caused by cookiecutter syntax)
    "D203",  # Incompatible with D211
    "D213"  # Incompatible with D212
]

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]
